@@ -28,23 +28,20 @@
 /**
  * Authentication class
  *
- * This is the component responsible to authenticate users. By default, only one authentication handler allowing to
- * authenticate a user with its username and password is provided but since the authentication process is pluggable,
- * any plugin can provide its own authentication handler by registering it on the onAuthentication event.
+ * This component is responsible to authenticate users using authentication handlers. An authentication handler is an
+ * event listener which is listening to the onAuthenticate event that is triggered when the authentication process
+ * occurs.
  *
- * Any authentication handler registered on the onAuthentication event should act only if the previous handler failed to
- * authenticate the user. When triggered, the handler receive an event object as unique parameter, which provides some
- * parameters such as the context (the iMSCP_Authentication instance) and an iMSCP_Authentication_Result object allowing
- * to know whether or not the previous authentication attempt made by any other handler has been succeeded. Each handler
- * should return an iMSCP_Authentication_Result object.
+ * By default, only one authentication handler is registered, which authenticate user using an username and password.
+ * Plugin's developers can register their own authentication handler by registering them on the event manager.
  *
- * If you want implement your own authentication handler in your plugins, look at the default one provided by this
- * class.
+ * An authentication handler which was successful, must short-circuit the execution of any other authentication handlers
+ * by stopping the onAuthentication event propagation. Each authentication handler must return an
+ * iMSCP_Authentication_Result object which allows the authentication component to know if the authentication process
+ * was successful.
  *
- * @category	iMSCP
- * @package		Authentication
- * @author		Laurent Declercq <l.declercq@nuxwin.com>
- * @version		0.0.5
+ * Each authentication handler is receiving the onAuthentication event as context parameter.
+ *
  */
 class iMSCP_Authentication
 {
@@ -122,24 +119,21 @@ class iMSCP_Authentication
 	/**
 	 * User password authentication handler
 	 *
-	 * This is the default authentication handler that try to authenticate a user using it username and password.
+	 * This is the default authentication handler which authenticate an user using its username and password.
 	 *
 	 * @return iMSCP_Authentication_Result
 	 * @param iMSCP_Events_Event $event
 	 */
-	static function authenticateUserPassword($event)
+	public function __invoke($event)
 	{
-		// If any other handler succeeded to authenticate the user, we simply return its result
-		$result = $event->getParam('authResult', false);
-		if ($result && $result->isValid) return $result;
-
-		$username = encode_idna(clean_input($event->getParam('username')));
-		$password = clean_input($event->getParam('password'));
+		$username = encode_idna($this->getUsername());
+		$password = clean_input($this->getPassword());
 
 		if (empty($username) || empty($password)) {
 			if (empty($username)) {
 				$message[] = tr('The username field is empty.');
 			}
+
 			if (empty($password)) {
 				$message[] = tr('The password field is empty.');
 			}
@@ -147,12 +141,7 @@ class iMSCP_Authentication
 
 		if (!isset($message)) {
 			$query = "
-              SELECT
-     		    `admin_id`, `admin_name`, `admin_pass`, `admin_type`, `email`, `created_by`
-     	      FROM
-     		    `admin`
-     	      WHERE
-     		    `admin_name` = ?
+              SELECT admin_id, admin_name, admin_pass, admin_type, email, created_by FROM admin WHERE admin_name = ?
      	    ";
 			$stmt = exec_query($query, $username);
 
@@ -171,7 +160,7 @@ class iMSCP_Authentication
 				} else {
 					if(strpos($dbPassword, '$') !== 0) { # Not a password encrypted with crypt(), then re-encrypt it
 						exec_query(
-							'UPDATE `admin` SET `admin_pass` = ? WHERE `admin_id` = ?',
+							'UPDATE admin SET admin_pass = ? WHERE admin_id = ?',
 							array(cryptPasswordWithSalt($password), $identity->admin_id)
 						);
 						write_log(
@@ -181,6 +170,7 @@ class iMSCP_Authentication
 					}
 
 					$result = new iMSCP_Authentication_Result(iMSCP_Authentication_Result::SUCCESS, $identity);
+					$event->stopPropagation();
 				}
 			}
 		} else {
@@ -192,16 +182,11 @@ class iMSCP_Authentication
 			);
 		}
 
-		$event->setParam('authResult', $result); // Pass the result to any other handler via event object
-
 		return $result;
 	}
 
 	/**
 	 * Process authentication
-	 *
-	 * This method launchs the authentication process. By default, only the authenticateUserPassword handler is
-	 * registered, and triggered with a priority of 10.
 	 *
 	 * @trigger onBeforeAuthentication
 	 * @trigger onAuthentication
@@ -212,20 +197,14 @@ class iMSCP_Authentication
 	{
 		$em = $this->getEvents();
 
-		$response = $em->dispatch(
-			iMSCP_Events::onBeforeAuthentication,
-			array('context' => $this, 'username' => $this->username, 'password' => $this->password)
-		);
+		$response = $em->dispatch(iMSCP_Events::onBeforeAuthentication, array('context' => $this));
 
 		if (!$response->isStopped()) {
-			// Registers the default authentication handler (user,password)
-			$em->registerListener(iMSCP_Events::onAuthentication, array($this, 'authenticateUserPassword'), -10);
+			// Registers the default authentication handler
+			$em->registerListener(iMSCP_Events::onAuthentication, $this);
 
 			// Process authentication through available handlers
-			$response = $em->dispatch(
-				iMSCP_Events::onAuthentication,
-				array('context' => $this, 'username' => $this->username, 'password' => $this->password)
-			);
+			$response = $em->dispatch(iMSCP_Events::onAuthentication, array('context' => $this));
 
 			if (!($resultAuth = $response->last()) instanceof iMSCP_Authentication_Result) {
 				// Should never occurs since any authentication handler must return an iMSCP_Authentication_Result object
@@ -235,7 +214,7 @@ class iMSCP_Authentication
 			}
 
 			if ($resultAuth->isValid()) {
-				//$this->unsetIdentity(); // Prevent multiple successive calls from storing inconsistent results
+				$this->unsetIdentity(); // Prevent multiple successive calls from storing inconsistent results
 				$this->setIdentity($resultAuth->getIdentity());
 			} elseif ($resultAuth->getCode() === iMSCP_Authentication_Result::FAILURE_CREDENTIAL_EMPTY) {
 				$resultAuth->setMessage(null);
@@ -252,9 +231,20 @@ class iMSCP_Authentication
 	}
 
 	/**
+	 * Get username
+	 *
+	 * @param string $username Username
+	 * @return string|null
+	 */
+	public function getUsername()
+	{
+		return $this->username;
+	}
+
+	/**
 	 * Sets username to match against
 	 *
-	 * @param string $username Password
+	 * @param string $username Username
 	 * @return iMSCP_Authentication Provides fluent interface, returns self
 	 */
 	public function setUsername($username)
@@ -262,6 +252,16 @@ class iMSCP_Authentication
 		$this->username = (string)$username;
 
 		return $this;
+	}
+
+	/**
+	 * Get password
+	 *
+	 * @return string|null
+	 */
+	public function getPassword()
+	{
+		return $this->password;
 	}
 
 	/**
@@ -284,7 +284,7 @@ class iMSCP_Authentication
 	 */
 	public function hasIdentity()
 	{
-		$query = "SELECT COUNT(`session_id`) `cnt` FROM `login` WHERE `session_id` = ? AND `ipaddr` = ?";
+		$query = "SELECT COUNT(session_id) AS cnt FROM login WHERE session_id = ? AND ipaddr = ?";
 		$stmt = exec_query($query, array(session_id(), getipaddr()));
 		return ($stmt->fields['cnt'] && isset($_SESSION['user_id']));
 	}
@@ -326,7 +326,7 @@ class iMSCP_Authentication
 
 		$lastAccess = time();
 
-		$query = 'INSERT INTO `login` (`session_id`, `ipaddr`, `lastaccess`, `user_name`) VALUES (?, ?, ?, ?)';
+		$query = 'INSERT INTO login (session_id, ipaddr, lastaccess, user_name) VALUES (?, ?, ?, ?)';
 		exec_query($query, array(session_id(), getIpAddr(), $lastAccess, $identity->admin_name));
 
 		$_SESSION['user_logged'] = $identity->admin_name;
@@ -350,7 +350,7 @@ class iMSCP_Authentication
 	{
 		$this->getEvents()->dispatch(iMSCP_Events::onBeforeUnsetIdentity, array('context' => $this));
 
-		$query = "DELETE FROM `login` WHERE `session_id` = ?";
+		$query = "DELETE FROM login WHERE session_id = ?";
 		exec_query($query, session_id());
 
 		$preserveList = array(
